// Copyright 2013 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package cryptohome;

message SerializedInstallAttributes {
  message Attribute {
    required string name = 1;
    required bytes value = 2;
  }
  // Specifies the version of the install attributes used to write the file.
  // Should be incremented when fallback behavior is needed.
  optional uint32 version = 1 [default = 1];
  repeated Attribute attributes = 2;
}
